styles_about.css
body {
    font-family: 'Rubik', sans-serif;
    line-height: 1.9;
}

h1, h2, h3 {
  margin: 32px 0; }

h1, h2, h3 {
  line-height: 1.3; }

p {
    font-size: 16px; 
    margin: -16px 0px; }

a {
  color: #222;
  padding-bottom: 2px;
  position: relative;
  text-decoration: none;
  white-space: nowrap; }
  @media screen and (min-width: 680px) {
    a {
      padding-bottom: 3px; } }
  a:after {
    background-color: #222;
    bottom: 0;
    content: '';
    height: 1px;
    left: 0;
    position: absolute;
    right: 0;
    transition: right 0.2s ease, left 0.2s ease; }
  a:hover:after {
    left: 50%;
    right: 50%; }

hr {
  background-color: #000;
  border: none; }

hr.main {
    height: 2px; }

.container {
  margin: 0 auto;
  max-width: 960px;
  padding: 32px 16px;
  width: 100%; }
  @media screen and (min-width: 680px) {
    .container {
      padding: 64px 32px; } }
  @media screen and (min-width: 960px) {
    .container {
      padding: 128px 32px; } }

.clearfix:before, .clearfix:after {
  content: " ";
  display: block; }

.clearfix:after {
  clear: both; }

.animated {
  animation-duration: 0.4s;
  animation-fill-mode: both; }
  .animated.has-delay-1 {
    animation-delay: 0.4s; }
  .animated.has-delay-2 {
    animation-delay: 0.8s; }
  .animated.has-delay-3 {
    animation-delay: 1.2s; }
  .animated.has-delay-4 {
    animation-delay: 1.6s; }
  .animated.has-delay-5 {
    animation-delay: 2.0s; }
  .animated.has-delay-6 {
    animation-delay: 2.4s; }

.animated-fade-in {
  animation-name: fade-in; }

.column-lg-5 {
    width: 41.666%; }

.column-lg-7 {
    width: 58.333%; }

.float-left-md {
    float: left; }

.m-0 {
  margin: 0; }

.mb-3 {
  margin-bottom: 32px; }

.mb-lg-5 {
    margin-bottom: 128px; }

.mb-md-4 {
    margin-bottom: 64px; }

.mt-0 {
  margin-top: 0; }

